-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b13
-
x86
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212689 | 11.0.2 | Roman Kennke | P3 | Resolved | Fixed | b02 |
Some tests fail with:
# Internal Error (/home/rkennke/src/openjdk/jdk-jdk/src/hotspot/cpu/x86/assembler_x86.cpp:3819), pid=5051, tid=5055
# Error: assert(VM_Version::supports_sse4_1()) failed
When running hotspot/jtreg:tier1 on my ThreadRipper 1950X box. On Intel box, this works fine. It looks like it attempts to generate fast_sha1 stubs, which use Assembler::pinsrd() but then runs into supports_sse4_1().
I suspect the issue is two-fold:
- It should not generate that stub, using that instructions, on CPU that really do not support the required SSE4.1 instruction set.
- It should detect that TR CPU does, infact, support SSE 4.1
The failing tier1 tests are:
compiler/c1/Test6579789.java
compiler/c1/Test6855215.java
compiler/cpuflags/TestSSE4Disabled.java
# Internal Error (/home/rkennke/src/openjdk/jdk-jdk/src/hotspot/cpu/x86/assembler_x86.cpp:3819), pid=5051, tid=5055
# Error: assert(VM_Version::supports_sse4_1()) failed
When running hotspot/jtreg:tier1 on my ThreadRipper 1950X box. On Intel box, this works fine. It looks like it attempts to generate fast_sha1 stubs, which use Assembler::pinsrd() but then runs into supports_sse4_1().
I suspect the issue is two-fold:
- It should not generate that stub, using that instructions, on CPU that really do not support the required SSE4.1 instruction set.
- It should detect that TR CPU does, infact, support SSE 4.1
The failing tier1 tests are:
compiler/c1/Test6579789.java
compiler/c1/Test6855215.java
compiler/cpuflags/TestSSE4Disabled.java
- backported by
-
JDK-8212689 Tests fail with assert(VM_Version::supports_sse4_1()) on ThreadRipper CPU
-
- Resolved
-
- relates to
-
JDK-8194494 SHA-512 stub uses AVX 2 instructions on non-supporting CPUs
-
- Closed
-
-
JDK-8165381 Update for x86 SHA512 using AVX2
-
- Resolved
-