8211061: Tests fail with assert(VM_Version::supports_sse4_1()) on ThreadRipper CPU

Reviewed-by: thartmann, roland